Kubernetes/sample_configs/gcloud_helloworld_nginx_ingress/helloworld_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  type: NodePort
  selector:
    greeting: hello
    department: world
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
