Kubernetes/sample_configs/gcloud_helloworld_nginx_ingress/ingress.yaml
#Note: This ingress works both with ClusterIP and NodePort as the serviceName (as of 02-03-2019)
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gcp-helloworld-ingress
#  annotations:
#    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hello-world-service
          servicePort: 80
